Provisioning/Vault/manifests/cert-manager-demo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: static-server
  namespace: cert-manager-demo
spec:
  selector:
    app: static-server
  ports:
    - port: 80
      targetPort: 8080
